force-app/main/default/objects/Audit_Log__c/Audit_Log__c.object-meta.xml
<CustomObject>
    <label>Audit_Log</label>
    <nameField>
        <displayFormat>AUD-{0000000}</displayFormat>
        <label>Audit_Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Audit_Log</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>