force-app/main/default/objects/Audit_Log__c/fields/Object_Id__c.field-meta.xml
<CustomField>
    <fullName>Object_Id__c</fullName>
    <label>Object_Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>