force-app/main/default/objects/Audit_Log__c/fields/Object_json__c.field-meta.xml
<CustomField>
    <fullName>Object_json__c</fullName>
    <label>Object_json</label>
    <length>131070</length>
    <type>LongTextArea</type>
</CustomField>